--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,14 +1,29 @@
-.img > .img-card {
+.message {
   position: absolute;
+  top: 45%;
+  left: 43%;
+  color: green;
+  z-index: 999;
+  border: 2px solid green;
+  padding: 20px 50px;
+  transition: 0.5s;
+  background-color: rgb(193, 247, 193);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
 }
-
-.img {
-  margin-top: 8vh;
-  margin-bottom: 8vh;
+.img-card {
+  position: absolute;
+  top: 20%;
+  left: 35%;
+  max-width: 350px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .round {
   border: 1px solid black;
   border-radius: 50%;
   width: 100px;
+}
+
+.img {
 }
