--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,9 +1,8 @@
 .message {
   position: absolute;
   top: 45%;
-  left: 30%;
   color: green;
-  z-index: 999;
+  z-index: 700;
   border: 2px solid green;
   padding: 20px 50px;
   transition: 0.5s;
@@ -11,11 +10,26 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 5px;
 }
+.navbar {
+  margin-top: 5px;
+  background-color: rgb(252, 113, 0) !important;
+}
+
+.shadow {
+  background-color: orangered;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.noBo {
+  background-color: orangered;
+  border: none !important;
+}
 .img-card {
   position: absolute;
   top: 20%;
-  left: 35%;
-  max-width: 350px;
+  background-color: orangered;
+  /* left: 35%; */
+  /* max-width: 350px; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
