--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -1,6 +1,10 @@
 .login {
   margin-top: 20vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: orangered;
+}
+input {
+  border-color: rgb(255, 238, 0) !important;
 }
 .response-text {
   border: 1px solid blue;
